clouds/aws/bastion.tf
# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

## ====================================================
## Provision and set up Bastion Host for juju (Optional)
## ====================================================

data "aws_ami" "ubuntu_24" {
  most_recent = true
  owners      = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# security group for bastion access
resource "aws_security_group" "bastion_sg" {
  count  = var.PROVISION_BASTION ? 1 : 0
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.SOURCE_ADDRESSES
    description = "SSH access from allowed IPs"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound traffic"
  }

  depends_on = [aws_vpc.main_vpc]
}

# Security group for access from bastion to controller subnet
resource "aws_security_group" "bastion_to_controller_sg" {
  count  = var.PROVISION_BASTION ? 1 : 0
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg[count.index].id]
    description     = "SSH access from bastion host"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound traffic"
  }

  depends_on = [aws_vpc.main_vpc]
}


resource "aws_iam_role" "bastion_role" {
  count = var.PROVISION_BASTION ? 1 : 0
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "bastion_role_attachment" {
  count      = var.PROVISION_BASTION ? 1 : 0
  role       = aws_iam_role.bastion_role[count.index].name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}

resource "aws_iam_instance_profile" "bastion_profile" {
  count = var.PROVISION_BASTION ? 1 : 0
  role  = aws_iam_role.bastion_role[count.index].name
}

resource "aws_instance" "bastion_host" {
  count                  = var.PROVISION_BASTION ? 1 : 0
  ami                    = data.aws_ami.ubuntu_24.id #Ubuntu 24.04
  instance_type          = "t2.medium"
  key_name               = var.SSH_KEY
  subnet_id              = aws_subnet.public_a_subnet.id
  vpc_security_group_ids = [aws_security_group.bastion_sg[count.index].id]
  iam_instance_profile   = aws_iam_instance_profile.bastion_profile[count.index].name

  root_block_device {
    volume_type           = "gp2"
    volume_size           = 20
    delete_on_termination = true
    encrypted             = true
  }

  depends_on = [aws_subnet.controller_subnet, aws_iam_instance_profile.bastion_profile]
}

resource "null_resource" "set_up_bastion_script" {
  count = var.PROVISION_BASTION ? 1 : 0
  provisioner "file" {
    content = templatefile("scripts/setup-juju-env.tftpl", {
      bastion          = true,
      region           = var.REGION,
      vpc_id           = aws_vpc.main_vpc.id,
      subnet_id        = aws_subnet.controller_subnet.id,
      access_key       = var.ACCESS_KEY,
      secret_key       = var.SECRET_KEY,
      eks_cluster_name = var.EKS_CLUSTER_NAME
    })
    destination = "setup-juju-env.sh"
  }

  provisioner "remote-exec" {
    inline = [
      "bash ~/setup-juju-env.sh",
      "rm ~/setup-juju-env.sh",
    ]
  }

  connection {
    type        = "ssh"
    host        = aws_instance.bastion_host[count.index].public_ip
    user        = "ubuntu"
    private_key = file(var.SSH_KEY_FILE)
  }

  depends_on = [
    aws_instance.bastion_host,
    aws_vpc.main_vpc,
    aws_subnet.controller_subnet,
    aws_eks_cluster.eks,
  ]
}
